[package]
name = "fcowsay"
version = "2.0.0"
edition = "2021"
authors = ["Calestial Ashley <calestialashley@gmail.com>"]
description = "Rust Library for working with cowsay"
license = "MIT"
repository = "https://github.com/linuxfanboy4/fcowsay.git"
homepage = "https://github.com/linuxfanboy4/fcowsay.git"
readme = "https://raw.githubusercontent.com/linuxfanboy4/fcowsay/refs/heads/main/README.md"

[dependencies]
